--- a/emacs-init.org
+++ b/emacs-init.org
@@ -268,6 +268,9 @@
     (define-key org-mode-map (kbd "<s-left>") 'org-promote-subtree)
     (define-key org-mode-map (kbd "<s-right>") 'org-demote-subtree))
 
+  (use-package ox-beamer
+    :after ox)
+
   (use-package ox-md
     :after ox)
 
