--- a/emacs-init.org
+++ b/emacs-init.org
@@ -578,15 +578,19 @@ Configuration for [[https://github.com/emacs-lsp/lsp-mode][lsp-mode]] or [[https
 ** TeX
 
 #+begin_src emacs-lisp :results silent
-  (setq-default TeX-master nil)
+  (use-package auctex
+    :mode ("\\.tex\\'" . TeX-latex-mode)
+    :config
+    (add-hook 'TeX-after-compilation-finished-functions #'TeX-revert-document-buffer)
+    (setq-default TeX-master nil)
+    (setq font-latex-fontify-sectioning 1.0
+          font-latex-fontify-script nil
+          TeX-source-correlate-mode 'synctex
+          TeX-source-correlate-start-server t))
 
-  (setq font-latex-fontify-sectioning 1.0
-        font-latex-fontify-script nil)
-
-  (setq TeX-source-correlate-mode 'synctex
-        TeX-source-correlate-start-server t)
-
-  (add-hook 'TeX-after-compilation-finished-functions #'TeX-revert-document-buffer)
+  (use-package reftex
+    :after auctex
+    :hook (LaTeX-mode . reftex-mode))
 
   (use-package helm-bibtex :ensure t)
   (use-package company-bibtex :ensure t)
@@ -608,21 +612,23 @@ Configuration for [[https://github.com/emacs-lsp/lsp-mode][lsp-mode]] or [[https
 ** Thesis
 
   #+begin_src emacs-lisp :results silent
-    (when ddavis-v-is-mac
-      (add-to-list 'company-backends 'company-bibtex)
-      (setq company-bibtex-bibliography
-            '("/Users/ddavis/Desktop/thesis/biblio/refs.bib"))
-      (setq bibtex-completion-bibliography
-            '("/Users/ddavis/Desktop/thesis/biblio/refs.bib")))
+    (defvar ddavis-v-thesis-bib nil)
+    (defvar ddavis-v-thesis-file nil)
 
     (defun ddavis/work-on-thesis ()
       (interactive)
+      (when (file-exists-p "~/Desktop/thesis/biblio/refs.bib")
+        (setq ddavis-v-thesis-file "~/Desktop/thesis/dissertation.tex"
+              ddavis-v-thesis-bib "~/Desktop/thesis/biblio/refs.bib"))
+      (when (file-exists-p "~/Documents/thesis/biblio/refs.bib")
+        (setq ddavis-v-thesis-file "~/Documents/thesis/dissertation.tex"
+              ddavis-v-thesis-bib "~/Documents/thesis/biblio/refs.bib"))
       (add-hook 'LaTeX-mode-hook 'turn-on-reftex)
-      (setq reftex-plug-into-AUCTeX t)
-      (when (file-exists-p "~/Desktop/thesis/dissertation.tex")
-        (find-file "~/Desktop/thesis/dissertation.tex"))
-      (when (file-exists-p "~/Documents/thesis/dissertation.tex")
-        (find-file "~/Documents/thesis/dissertation.tex")))
+      (add-to-list 'company-backends 'company-bibtex)
+      (setq company-bibtex-bibliography `(,ddavis-v-thesis-bib)
+            bibtex-completion-bibliography `(,ddavis-v-thesis-bib)
+            reftex-plug-into-AUCTeX t)
+      (find-file ddavis-v-thesis-file))
 
     (when ddavis-v-is-mac
       (global-set-key (kbd "s-t") #'ddavis/work-on-thesis))
