--- a/emacs-init.org
+++ b/emacs-init.org
@@ -320,23 +320,53 @@
     (setq uniquify-after-kill-buffer-p t))
 #+end_src
 
+* Hydra
+
+#+begin_src emacs-lisp :results silent
+  (use-package hydra :ensure t)
+  (use-package pretty-hydra :ensure t)
+#+end_src
+
 * Projectile
 
 #+begin_src emacs-lisp :results silent
   (use-package projectile
     :ensure t
+    :demand t
     :bind-keymap ("C-c P" . projectile-command-map)
     :config
-    (projectile-mode +1)
-    (setq projectile-track-known-projects-automatically nil))
-
-  (use-package project
-    :config
-    (add-to-list 'project-find-functions 'ddavis/projectile-proj-find-function))
+    (setq projectile-track-known-projects-automatically nil
+          projectile-globally-ignored-file-suffixes '("#" "~" ".o" ".so" ".elc" ".pyc")
+          projectile-globally-ignored-directories '(".git" "__pycache__")
+          projectile-globally-ignored-files '(".DS_Store"))
+    (projectile-mode))
 
   (defun ddavis/projectile-proj-find-function (dir)
     (let ((root (projectile-project-root dir)))
       (and root (cons 'transient root))))
+
+  (use-package project
+    :config
+    (add-to-list 'project-find-functions #'ddavis/projectile-proj-find-function))
+#+end_src
+
+** Hydra
+
+#+begin_src emacs-lisp :results silent
+  (pretty-hydra-define hydra-projectile (:exit t :hint nil :title (projectile-project-root) :quit-key "q")
+    ("Movement" (("b" projectile-switch-to-buffer               "switch")
+                 ("B" projectile-switch-to-buffer-other-window  "switch (OW)")
+                 ("f" projectile-find-file                      "file")
+                 ("F" projectile-find-file-other-window         "file (OW)")
+                 ("s" projectile-switch-project                 "switch project"))
+
+     "Search" (("r" ddavis/helm-project-search                  "ripgrep")
+               ("o" projectile-multi-occur                      "multioccur"))
+
+     "Misc" (("k" projectile-kill-buffers                       "Kill em")
+             ("i" projectile-ibuffer                            "ibuffer"))))
+
+  (define-key projectile-mode-map (kbd "C-c p") 'hydra-projectile/body)
 #+end_src
 
 * Helm
@@ -495,7 +525,7 @@ Configuration for [[https://github.com/emacs-lsp/lsp-mode][lsp-mode]] or [[https
     (setq lsp-clients-clangd-executable ddavis-v-clangd-exe)
     (setq lsp-prefer-capf t)
     (setq lsp-enable-on-type-formatting nil)
-    (setq lsp-auto-guess-root t))
+    (setq lsp-auto-guess-root nil))
 
   (use-package lsp-ui
     :ensure t
@@ -506,11 +536,49 @@ Configuration for [[https://github.com/emacs-lsp/lsp-mode][lsp-mode]] or [[https
   (use-package lsp-python-ms :ensure t)
   (use-package company-lsp :ensure t :commands company-lsp)
   (use-package eglot :ensure t)
+  (use-package helm-lsp :commands helm-lsp-workspace-symbol)
+#+end_src
+
+** Hydra
+
+#+begin_src emacs-lisp :results silent
+  (defhydra hydra-lsp (:exit t :hint nil)
+    "
+   Buffer^^               Server^^                   Symbol
+  -------------------------------------------------------------------------------------
+   [_f_] format           [_M-r_] restart            [_d_] declaration  [_i_] implementation  [_o_] documentation
+   [_m_] imenu            [_S_]   shutdown           [_D_] definition   [_t_] type            [_r_] rename
+   [_x_] execute action   [_M-s_] describe session   [_R_] references   [_s_] signature"
+    ("d" lsp-find-declaration)
+    ("D" lsp-ui-peek-find-definitions)
+    ("R" lsp-ui-peek-find-references)
+    ("i" lsp-ui-peek-find-implementation)
+    ("t" lsp-find-type-definition)
+    ("s" lsp-signature-help)
+    ("o" lsp-describe-thing-at-point)
+    ("r" lsp-rename)
+
+    ("f" lsp-format-buffer)
+    ("m" lsp-ui-imenu)
+    ("x" lsp-execute-code-action)
+
+    ("M-s" lsp-describe-session)
+    ("M-r" lsp-restart-workspace)
+    ("S" lsp-shutdown-workspace)
+
+    ("C-g" nil :color blue)
+    ("q" nil :color blue))
+
+  (define-key lsp-mode-map (kbd "C-c l") 'hydra-lsp/body)
 #+end_src
 
 * Python
 
 #+begin_src emacs-lisp :results silent
+  (use-package python
+    :defer t
+    :hook python-mode-hook)
+
   (use-package pydoc :ensure t)
   (use-package helm-pydoc :ensure t)
   (use-package elpy :ensure t)
@@ -952,6 +1020,64 @@ Setting up authentication with encryption
     :hook (dired-mode . diredfl-mode))
 #+end_src
 
+** Hydra
+
+#+begin_src emacs-lisp :results silent
+  (defhydra hydra-dired (:hint nil :color pink)
+    "
+    _+_ mkdir          _v_ view         _m_ mark           _(_ details        _i_ insert-subdir  wdired
+    _C_ copy           _O_ view other   _U_ unmark all     _)_ omit-mode      _$_ hide-subdir    C-x C-q : edit
+    _D_ delete         _o_ open other   _u_ unmark         _l_ redisplay      _w_ kill-subdir    C-c C-c : commit
+    _R_ rename         _M_ chmod        _t_ toggle         _g_ revert buf     _e_ ediff          C-c ESC : abort
+    _Y_ rel symlink    _G_ chgrp        _E_ extension mark _s_ sort           _=_ pdiff
+    _S_ symlink        ^ ^              _F_ find marked    _._ toggle hydra   \\ flyspell
+    _r_ rsync          ^ ^              ^ ^                ^ ^                _?_ summary
+    _z_ compress-file  _A_ find regexp
+    _Z_ compress       _Q_ repl regexp
+
+    T - tag prefix
+    "
+    ("\\" dired-do-ispell)
+    ("(" dired-hide-details-mode)
+    (")" dired-omit-mode)
+    ("+" dired-create-directory)
+    ("=" diredp-ediff)         ;; smart diff
+    ("?" dired-summary)
+    ("$" diredp-hide-subdir-nomove)
+    ("A" dired-do-find-regexp)
+    ("C" dired-do-copy)        ;; Copy all marked files
+    ("D" dired-do-delete)
+    ("E" dired-mark-extension)
+    ("e" dired-ediff-files)
+    ("F" dired-do-find-marked-files)
+    ("G" dired-do-chgrp)
+    ("g" revert-buffer)        ;; read all directories again (refresh)
+    ("i" dired-maybe-insert-subdir)
+    ("l" dired-do-redisplay)   ;; relist the marked or singel directory
+    ("M" dired-do-chmod)
+    ("m" dired-mark)
+    ("O" dired-display-file)
+    ("o" dired-find-file-other-window)
+    ("Q" dired-do-find-regexp-and-replace)
+    ("R" dired-do-rename)
+    ("r" dired-do-rsynch)
+    ("S" dired-do-symlink)
+    ("s" dired-sort-toggle-or-edit)
+    ("t" dired-toggle-marks)
+    ("U" dired-unmark-all-marks)
+    ("u" dired-unmark)
+    ("v" dired-view-file)      ;; q to exit, s to search, = gets line #
+    ("w" dired-kill-subdir)
+    ("Y" dired-do-relsymlink)
+    ("z" diredp-compress-this-file)
+    ("Z" dired-do-compress)
+    ("q" nil)
+    ("C-g" nil :color blue)
+    ("." nil :color blue))
+
+  (define-key dired-mode-map "." 'hydra-dired/body)
+#+end_src
+
 * Email
 ** sending mail
 
@@ -980,6 +1106,16 @@ My [[https://www.djcbsoftware.nl/code/mu/mu4e.html][mu4e]] setup
     (let ((maildir (helm-comp-read "Maildir: " (mu4e-get-maildirs))))
       (mu4e-headers-search (format "maildir:\"%s\"" maildir))))
 
+  (defun mu4e-action-view-in-w3m ()
+    "View the body of the message in emacs w3m."
+    (interactive)
+    (w3m-browse-url (concat "file://"
+                            (mu4e~write-body-to-html (mu4e-message-at-point t)))))
+
+  (defun ddavis/mu4e-toggle-gnus ()
+    (interactive)
+    (setq mu4e-view-use-gnus (not mu4e-view-use-gnus)))
+
   (with-eval-after-load "mm-decode"
     (add-to-list 'mm-discouraged-alternatives "text/html")
     (add-to-list 'mm-discouraged-alternatives "text/richtext"))
@@ -988,7 +1124,18 @@ My [[https://www.djcbsoftware.nl/code/mu/mu4e.html][mu4e]] setup
     :when ddavis-v-enable-mu4e
     :load-path ddavis-v-mu4e-dir
     :commands (mu4e mu4e-update-mail-and-index)
-    :bind (("C-c 4" . mu4e))
+    :bind (("C-c 4" . mu4e)
+           :map mu4e-headers-mode-map
+           ("j" . ddavis/mu4e-jump-via-helm)
+           ("d" . mu4e-headers-mark-for-delete)
+           ("D" . mu4e-headers-mark-for-trash)
+           :map mu4e-main-mode-map
+           ("j" . ddavis/mu4e-jump-via-helm)
+           :map mu4e-view-mode-map
+           ("M" . mu4e-action-view-in-w3m)
+           ("j" . ddavis/mu4e-jump-via-helm)
+           ("d" . mu4e-headers-mark-for-delete)
+           ("D" . mu4e-headers-mark-for-trash))
     :config
     (setq mu4e-mu-binary ddavis-v-mu-exe
           mu4e-change-filenames-when-moving t
@@ -1001,16 +1148,16 @@ My [[https://www.djcbsoftware.nl/code/mu/mu4e.html][mu4e]] setup
           mu4e-attachment-dir (expand-file-name "~/Downloads/")
           mu4e-change-filenames-when-moving t)
 
-    (define-key mu4e-headers-mode-map "j" 'ddavis/mu4e-jump-via-helm)
-    (define-key mu4e-view-mode-map "j" 'ddavis/mu4e-jump-via-helm)
-    (define-key mu4e-main-mode-map "j" 'ddavis/mu4e-jump-via-helm)
-    (define-key mu4e-headers-mode-map (kbd "C-c k") 'mu4e-kill-update-mail)
-    (define-key mu4e-view-mode-map (kbd "C-c k") 'mu4e-kill-update-mail)
-    (define-key mu4e-main-mode-map (kbd "C-c k") 'mu4e-kill-update-mail)
-    (define-key mu4e-headers-mode-map "d" 'mu4e-headers-mark-for-delete)
-    (define-key mu4e-headers-mode-map "D" 'mu4e-headers-mark-for-trash)
-    (define-key mu4e-view-mode-map "d" 'mu4e-view-mark-for-delete)
-    (define-key mu4e-view-mode-map "D" 'mu4e-view-mark-for-trash)
+    (setq mu4e-compose-reply-ignore-address
+          '("notifications@github\\.com"
+            "ddavis@ddavis\\.io"
+            "ddavis@phy\\.duke\\.edu"
+            "douglas\\.davis\\.092@gmail\\.com"
+            "douglas\\.davis@duke\\.edu"
+            "douglas\\.davis@cern\\.ch"
+            "ddavis@cern\\.ch"))
+
+    (setq w3m-default-desplay-inline-images t)
 
     (setq mu4e-contexts
           `( ,(make-mu4e-context
@@ -1136,47 +1283,7 @@ My [[https://www.djcbsoftware.nl/code/mu/mu4e.html][mu4e]] setup
                  (make-mu4e-bookmark
                   :name "Last 7 days"
                   :query "date:1w..now"
-                  :key ?7))
-
-    (setq mu4e-compose-reply-ignore-address
-          '("notifications@github\\.com"
-            "ddavis@ddavis\\.io"
-            "ddavis@phy\\.duke\\.edu"
-            "douglas\\.davis\\.092@gmail\\.com"
-            "douglas\\.davis@duke\\.edu"
-            "douglas\\.davis@cern\\.ch"
-            "ddavis@cern\\.ch"))
-
-    (setq w3m-default-desplay-inline-images t)
-
-    (defun mu4e-action-view-in-w3m ()
-      "View the body of the message in emacs w3m."
-      (interactive)
-      (w3m-browse-url (concat "file://"
-                              (mu4e~write-body-to-html (mu4e-message-at-point t)))))
-    (define-key mu4e-view-mode-map (kbd "M") 'mu4e-action-view-in-w3m)
-
-    (defun ddavis/mu4e-toggle-gnus ()
-      (interactive)
-      (setq mu4e-view-use-gnus (not mu4e-view-use-gnus)))
-
-    (define-key mu4e-headers-mode-map (kbd "C-c g") 'ddavis/mu4e-toggle-gnus))
-
-  ;; (when ddavis-v-enable-mu4e
-  ;;   (use-package visual-fill-column
-  ;;     :ensure t
-  ;;     :after mu4e
-  ;;     :hook ((visual-line-mode . visual-fill-column-mode)
-  ;;            (mu4e-view-mode . visual-line-mode))
-  ;;     :config
-  ;;     (add-hook 'mu4e-view-mode-hook
-  ;;               (lambda () (setq-local fill-column 98))))
-
-  ;; (use-package mu4e-maildirs-extension
-  ;;   :ensure t
-  ;;   :after mu4e
-  ;;   :config
-  ;;   (mu4e-maildirs-extension)))
+                  :key ?7)))
 #+end_src
 
 * macOS
@@ -1410,146 +1517,6 @@ usage of both.
            ("C-h k" . #'helpful-key)
            :map helpful-mode-map
            ("q" . kill-buffer-and-window)))
-#+end_src
-
-* Hydra
-** installation
-
-#+begin_src emacs-lisp :results silent
-  (use-package hydra :ensure t)
-#+end_src
-
-** projectile
-
-#+begin_src emacs-lisp :results silent
-  (defhydra hydra-projectile-other-window (:color teal)
-    "projectile-other-window"
-    ("f"  projectile-find-file-other-window        "file")
-    ("g"  projectile-find-file-dwim-other-window   "file dwim")
-    ("d"  projectile-find-dir-other-window         "dir")
-    ("b"  projectile-switch-to-buffer-other-window "buffer")
-    ("q"  nil                                      "cancel" :color blue))
-
-  (defhydra hydra-projectile (:color teal :hint nil)
-    "
-       PROJECTILE: %(projectile-project-root)
-
-       Find File            Search/Tags          Buffers                Cache
-  ------------------------------------------------------------------------------------------
-    _f_: file           _r_: ripgrep       _i_: ibuffer           _c_: cache clear
-  _s-f_: file dwim      _o_: multi-occer   _b_: switch to buffer  _x_: remove known project
-  _s-d_: file curr dir  ^ ^                _K_: kill all buffers  _X_: cleanup non-existing
-    _d_: dir            ^ ^                ^ ^                    _z_: cache current
-
-  "
-    ("b"   projectile-switch-to-buffer)
-    ("c"   projectile-invalidate-cache)
-    ("d"   projectile-find-dir)
-    ("f"   projectile-find-file)
-    ("s-f" projectile-find-file-dwim)
-    ("s-d" projectile-find-file-in-directory)
-    ("i"   projectile-ibuffer)
-    ("K"   projectile-kill-buffers)
-    ("m"   projectile-multi-occur)
-    ("o"   projectile-multi-occur)
-    ("s-p" projectile-switch-project "switch project")
-    ("p"   projectile-switch-project)
-    ("s"   projectile-switch-project)
-    ("r"   ddavis/helm-project-search)
-    ("x"   projectile-remove-known-project)
-    ("X"   projectile-cleanup-known-projects)
-    ("z"   projectile-cache-current-file)
-    ("`"   hydra-projectile-other-window/body "other window")
-    ("q"   nil "cancel" :color blue))
-
-  (define-key projectile-mode-map (kbd "C-c p") 'hydra-projectile/body)
-#+end_src
-
-** dired
-
-#+begin_src emacs-lisp :results silent
-  (defhydra hydra-dired (:hint nil :color pink)
-    "
-  _+_ mkdir          _v_ view         _m_ mark           _(_ details        _i_ insert-subdir  wdired
-  _C_ copy           _O_ view other   _U_ unmark all     _)_ omit-mode      _$_ hide-subdir    C-x C-q : edit
-  _D_ delete         _o_ open other   _u_ unmark         _l_ redisplay      _w_ kill-subdir    C-c C-c : commit
-  _R_ rename         _M_ chmod        _t_ toggle         _g_ revert buf     _e_ ediff          C-c ESC : abort
-  _Y_ rel symlink    _G_ chgrp        _E_ extension mark _s_ sort           _=_ pdiff
-  _S_ symlink        ^ ^              _F_ find marked    _._ toggle hydra   \\ flyspell
-  _r_ rsync          ^ ^              ^ ^                ^ ^                _?_ summary
-  _z_ compress-file  _A_ find regexp
-  _Z_ compress       _Q_ repl regexp
-
-  T - tag prefix
-  "
-    ("\\" dired-do-ispell)
-    ("(" dired-hide-details-mode)
-    (")" dired-omit-mode)
-    ("+" dired-create-directory)
-    ("=" diredp-ediff)         ;; smart diff
-    ("?" dired-summary)
-    ("$" diredp-hide-subdir-nomove)
-    ("A" dired-do-find-regexp)
-    ("C" dired-do-copy)        ;; Copy all marked files
-    ("D" dired-do-delete)
-    ("E" dired-mark-extension)
-    ("e" dired-ediff-files)
-    ("F" dired-do-find-marked-files)
-    ("G" dired-do-chgrp)
-    ("g" revert-buffer)        ;; read all directories again (refresh)
-    ("i" dired-maybe-insert-subdir)
-    ("l" dired-do-redisplay)   ;; relist the marked or singel directory
-    ("M" dired-do-chmod)
-    ("m" dired-mark)
-    ("O" dired-display-file)
-    ("o" dired-find-file-other-window)
-    ("Q" dired-do-find-regexp-and-replace)
-    ("R" dired-do-rename)
-    ("r" dired-do-rsynch)
-    ("S" dired-do-symlink)
-    ("s" dired-sort-toggle-or-edit)
-    ("t" dired-toggle-marks)
-    ("U" dired-unmark-all-marks)
-    ("u" dired-unmark)
-    ("v" dired-view-file)      ;; q to exit, s to search, = gets line #
-    ("w" dired-kill-subdir)
-    ("Y" dired-do-relsymlink)
-    ("z" diredp-compress-this-file)
-    ("Z" dired-do-compress)
-    ("q" nil)
-    ("." nil :color blue))
-
-  (define-key dired-mode-map "." 'hydra-dired/body)
-#+end_src
-
-** lsp
-
-#+begin_src emacs-lisp :results silent
-  (defhydra hydra-lsp (:exit t :hint nil)
-    "
-   Buffer^^               Server^^                   Symbol
-  -------------------------------------------------------------------------------------
-   [_f_] format           [_M-r_] restart            [_d_] declaration  [_i_] implementation  [_o_] documentation
-   [_m_] imenu            [_S_]   shutdown           [_D_] definition   [_t_] type            [_r_] rename
-   [_x_] execute action   [_M-s_] describe session   [_R_] references   [_s_] signature"
-    ("d" lsp-find-declaration)
-    ("D" lsp-ui-peek-find-definitions)
-    ("R" lsp-ui-peek-find-references)
-    ("i" lsp-ui-peek-find-implementation)
-    ("t" lsp-find-type-definition)
-    ("s" lsp-signature-help)
-    ("o" lsp-describe-thing-at-point)
-    ("r" lsp-rename)
-
-    ("f" lsp-format-buffer)
-    ("m" lsp-ui-imenu)
-    ("x" lsp-execute-code-action)
-
-    ("M-s" lsp-describe-session)
-    ("M-r" lsp-restart-workspace)
-    ("S" lsp-shutdown-workspace))
-
-  (define-key lsp-mode-map (kbd "C-c l") 'hydra-lsp/body)
 #+end_src
 
 * Tramp
